hphp/test/zend/good/Zend/tests/bug43332_1.php.expectf

Catchable fatal error: Argument 1 passed to foobar\foo::bar() must be an instance of foobar\foo, stdClass given in %s/bug43332_1.php on line 10
